# notepadpp-mcp

./: .cursorrules  .gitignore  .mcpbignore  .pre-commit-config.yaml  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md  SECURITY.md  UPGRADE_SUMMARY.md  build.ps1  coverage.xml  demonstration_test.py  dev.py  extension.toml  glama.json  glama.yml  manifest.json  mcpb.json  pyproject.toml  pytest.ini  requirements.txt  start.ps1  test.ps1  test_fastmcp.py
.cursor/: mcp.json  rules.md  tasks.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/apps/: glama-github-app.yml
.github/workflows/: build-mcpb.yml  build-mcpb.yml.disabled  ci.yml  dependency-review.yml  megatest.yml  release.yml
assets/: icon.png.placeholder
assets/prompts/: examples.json  quick-start.md  system.md  user.md
docs/: AI_DEVELOPMENT_RULES copy.md  COMPLETE_DOCUMENTATION_STRUCTURE.md  DOCUMENTATION_INDEX.md  EDITOR_AND_MCP_SCOPE.md  NOTEPADPP_MACROS.md  ORGANIZATION_SUMMARY.md  RING_MCP_API_REFERENCE.md  RING_MCP_ARCHITECTURE.md  RING_MCP_LOGGING_MONITORING.md  RING_MCP_MULTISERVER_MONITORING.md  RING_MCP_QUICK_REFERENCE.md  TECHNICAL_ARCHITECTURE.md  TOOL_DOCSTRING_MIGRATION.md  TOOL_DOCSTRING_STANDARD.md
docs/development/: AI_DEVELOPMENT_RULES.md  AI_DEVELOPMENT_TOOLS_COMPARISON.md  BULLETPROOF_MCP_GUIDE.md  DEVELOPMENT_PAIN_POINTS.md  FILE_VALIDATION_COMPLETE.md  FILE_VALIDATION_GUIDE.md  LINK_PARSER_FIX.md  MCP_SYNC_DEBUGGING_GUIDE.md  PYTHON_DEPENDENCY_HELL_FIX.md  SYNC_HEALTH_IMPROVEMENTS_SUMMARY.md  SYSTEMATIC_PROJECT_UPDATES.md
docs/github/: COMPLETE_SETUP_GUIDE.md
docs/glama-platform/: CI_CD_GLAMA_OPTIMIZATION_GUIDE.md  GLAMA_AI_OPTIMIZATION_SUMMARY.md  GOLD_STATUS_UPDATE_2025_10_08.md  README.md
docs/mcp-technical/: CONTAINERIZATION_GUIDELINES.md  MONITORING_STACK_DEPLOYMENT.md  TROUBLESHOOTING_FASTMCP_2.12.md
docs/mcpb-packaging/: MCPB_BUILDING_GUIDE.md  MCPB_IMPLEMENTATION_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  README.md
docs/notepadpp/: LANGUAGE_SERVER_PROTOCOL_EXPLAINED.md
docs/repository-protection/: BACKUP_AND_RECOVERY_GUIDE.md  BRANCH_PROTECTION_SETTINGS.md  BRANCH_STRATEGY_AND_AI_WORKFLOW.md  README.md
docs/serena/: SERENA_GUIDE.md  SERENA_INSTALL_AND_TEST.md
docs/testing/: DOCSTRING_TEMPLATE.md  MEGATEST_CONCEPT.md  MEGATEST_FRAMEWORK_COMPLETE.md  MEGATEST_LOCATION_AND_CLEANUP.md  MEGATEST_QUICK_REFERENCE.md  MEGATEST_SAFETY_GUARANTEES.md  MEGATEST_THREE_USE_CASES.md  UNIVERSAL_MCP_MEGATEST_GUIDE.md
native/: build.ps1
scripts/: README.md  backup-repo.ps1  build-mcpb-package.ps1  run_megatest.py  weed_docs_2026.py
src/: lib.rs
src/notepadpp_mcp/: __init__.py  ai.py  auth.py  docs_manifest.py  editor_bridge.py  file_validator.py  fleet.py  link_parser.py  npp_session_store.py  npp_theme.py  plugin_catalog.py  server.py  sync_health.py  transport.py  web.py
src/notepadpp_mcp/docs/: PRD.md  README.md
src/notepadpp_mcp/docs/examples/: basic_example.py
src/notepadpp_mcp/dxt/: __init__.py  dxt.toml
src/notepadpp_mcp/sampling/: __init__.py  notepad_sampling_handler.py
src/notepadpp_mcp/skills/notepadpp-mcp/: SKILL.md
src/notepadpp_mcp/tests/: conftest.py  test_basic.py  test_core_integration.py  test_file_validator.py  test_link_parser.py  test_link_parser.py.disabled  test_main_server.py  test_server.py  test_sync_health.py  test_sync_health.py.disabled  test_tools_integration.py
src/notepadpp_mcp/tools/: __init__.py  agentic_notepad_workflow.py  controller.py  display_operations.py  file_operations.py  linting_operations.py  plugin_operations.py  server.py  session_operations.py  status_operations.py  tab_operations.py  text_operations.py
temp_extract/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dev.py  glama.json  manifest.json  mcpb.json  pyproject.toml  requirements.txt
temp_extract/.github/: PULL_REQUEST_TEMPLATE.md  glama-webhook.yml
temp_extract/.github/ISSUE_TEMPLATE/: feature-request.yml
temp_extract/.github/workflows/: ci.yml  release.yml
temp_extract/.ruff_cache/0.13.3/: 8647696333595070835
temp_extract/.ruff_cache/0.14.10/: 1576436244807789673  6404288214548305310  8833899512629065429  9642836378830618388
temp_extract/assets/prompts/: configuration.md  troubleshooting.md
temp_extract/assets/screenshots/: dashboard.png.placeholder
temp_extract/scripts/: build-mcpb-package.ps1
temp_extract/src/notepadpp_mcp/: server.py  sync_health.py
temp_extract/src/notepadpp_mcp/docs/: PLUGIN_ECOSYSTEM.md  PRD.md  __init__.py
temp_extract/src/notepadpp_mcp/docs/examples/: basic_example.py
temp_extract/src/notepadpp_mcp/dxt/: dxt.toml
temp_extract/src/notepadpp_mcp/tests/: __init__.py  test_core_integration.py  test_file_validator.py  test_main_server.py  test_server.py
temp_extract/src/notepadpp_mcp/tools/: controller.py  display_operations.py  file_operations.py  linting_operations.py  plugin_operations.py  server.py  session_operations.py  status_operations.py  tab_operations.py  text_operations.py
temp_extract/tests/: test_file_validator.py  test_link_parser.py
tests/: test_file_validator.py  test_link_parser.py  test_sync_health.py
tests/megatest/: README.md  __init__.py  conftest.py
tests/megatest/level1_smoke/: test_smoke_basic.py
tests/megatest/level2_standard/: test_standard_core.py
tests/megatest/shared/: mock_fixtures.py
tests/unit/: test_npp_session_store.py  test_npp_theme.py  test_plugin_catalog.py
web_sota/: index.html  package-lock.json  package.json  start.ps1  start.ps1.bak.20260508_202256  vite.config.ts
web_sota/src/: App.tsx  main.tsx  vite-env.d.ts
web_sota/src/components/layout/: sidebar.tsx  topbar.tsx
web_sota/src/pages/: apps.tsx  chat.tsx  dashboard.tsx  diagnostics.tsx  editor.tsx  help.tsx  operations.tsx  plugins.tsx  settings.tsx  skill.tsx  status.tsx  tools.tsx
