[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notepadpp-mcp"
version = "0.1.0"
description = "MCP Server for Notepad++ automation and control"
authors = [
    {name = "Sandra", email = "sandra@example.com"}
]
readme = "src/notepadpp_mcp/docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
    "psutil>=5.9.0",
    "pywin32>=306; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/sandraschi/notepadpp-mcp"
Repository = "https://github.com/sandraschi/notepadpp-mcp"
Issues = "https://github.com/sandraschi/notepadpp-mcp/issues"

[project.scripts]
notepadpp-mcp = "notepadpp_mcp.tools.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notepadpp_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["notepadpp_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "win32gui",
    "win32con",
    "win32api",
    "win32process",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/notepadpp_mcp/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
